--- a/src/components/login/LoginForm.scss
+++ b/src/components/login/LoginForm.scss
@@ -21,8 +21,14 @@
         margin-bottom: 30px;
 
     }
+    .link {
+        text-align: center;
+        color: white;
+        margin-bottom: 20px;
+    }
     label {
         font-size: 16px;
+        pointer-events: none;
         color: white;
         position: absolute;
         left: 0;
@@ -30,13 +36,17 @@
         transition: .3s ease;
         transition-property: font-size, bottom, color;
     }
-    input {
+    input, select {
         background: none;
         border: none;
         outline: none;
         color: white;
         padding: 7px 0;
         height: 38px;
+    }
+    select option {
+        background-color: transparent;
+        color: black;
     }
     .message {
         position: absolute;
@@ -77,7 +87,6 @@
         border-bottom: 1px solid #D2D2D2;
         position: relative;
         margin-bottom: 40px;
-        border-radius: 1px;
 
         &::before {
             content: "";
@@ -85,12 +94,11 @@
             height: 0px;
             width: 0;
             background-color: #009688;
-            bottom: -1px;
+            bottom: -2px;
             transition: .3s ease width, height;
             left: 0;
             right: 0;
             margin: 0 auto;
-            border-radius: 1px;
         }
     }
 
