--- a/src/styles/layout/side-bar.scss
+++ b/src/styles/layout/side-bar.scss
@@ -1,14 +1,16 @@
 .side-bar {
     background-color: black;
-    width: 270px;
     height: 100%;
-    grid-row: 1/3;
     padding: 0 10px;
     padding-bottom: 30px;
     background-size: cover;
+    width: 100%;
+    max-width: 270px;
     z-index: 1;
-    position: relative;
     border-right: 1px solid rgba(255, 255, 255, .7);
+    top: 0px;
+    left: 0px;
+    position: fixed;
 
     h1 {
         text-transform: uppercase;
@@ -87,4 +89,9 @@
         height: inherit;
         opacity: .23;
     }
+}
+
+.padding-right {
+    padding-right: 270px;
+    height: 100%;
 }
