--- a/src/components/globals/IconButton/icon-button.scss
+++ b/src/components/globals/IconButton/icon-button.scss
@@ -1,21 +1,21 @@
-.button {
-    width: 125px;
-    height: 44px;
+.icon-button {
+    width: 41px;
+    height: 30px;
     border-radius: 3px;
     color: white;
-    padding-left: 10px;
-    position: relative;
     transition: .1s all;
-    
-    i {
-        position: absolute;
-        margin: auto 0;
-        left: 20px;
+    margin: 10px 0;
+    position: relative;
+
+    .loader {
+        width: 18px;
+        height: 18px;
     }
     &.loading {
         user-select: none;
         pointer-events: none;
     }
+    
     &.blue {
         background-color: rgb(3, 169, 244);
         &:hover {
