--- a/src/components/login/AuthForm.scss
+++ b/src/components/login/AuthForm.scss
@@ -2,7 +2,7 @@
     width: 300px;
     max-width: 300px;
     padding: 15px;
-    box-shadow: 0 0 3px rgb(0 0 0 / 70%);
+    box-shadow: 0 0 3px rgb(0, 0, 0, .7);
     border-radius: 0 0 2px 2px;
     background-color: rgba(0, 0, 0, .7);
     display: flex;
