--- a/src/styles/layout/side-bar.scss
+++ b/src/styles/layout/side-bar.scss
@@ -26,16 +26,23 @@
         user-select: none;
     }
     .schedule {
-        align-self: start;
+        align-self: center;
         margin-top: 10px;
         margin-bottom: 10px;
         font-family: 'RobotoCondensed';
     }
-    img {
+    img, .zmdi-account-circle {
         width: 100px;
         height: 100px;
         border-radius: 50%;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+    .zmdi-account-circle {
+        display: grid;
+        place-content: center;
+        font-size: 100px;
+        color: grey;
     }
     button {
         background-color: transparent;
