terminando subir avatar

--- a/src/components/globals/Inputs/form-group.scss
+++ b/src/components/globals/Inputs/form-group.scss
@@ -22,6 +22,10 @@
         color: white;
         padding: 7px 0;
         height: 38px;
+
+        &[type="file"] {
+            display: none;
+        }
     }
     select option {
         background-color: transparent;
