--- a/src/components/globals/Modal/modal.scss
+++ b/src/components/globals/Modal/modal.scss
@@ -27,6 +27,28 @@
             animation: modalCreate .1s;
         }
     }
+    .title {
+        color: #595959;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 60px;
+        font-family: sans-serif;
+    }
+    .description {
+        font-size: 18px;
+        font-weight: 300;
+        line-height: normal;
+        color: #545454;
+    }
+
+    .title, .description {
+        &.center {
+            text-align: center;
+        }
+        &.mb {
+            margin-bottom: 15px;
+        }
+    }
 
     .bot {
         display: flex;
@@ -166,19 +188,6 @@ div.next-step {
                 transform-origin: 0 60px;
             }
         }
-    }
-    .title {
-        color: #595959;
-        font-size: 30px;
-        font-weight: 600;
-        line-height: 60px;
-        font-family: sans-serif;
-    }
-    .description {
-        font-size: 18px;
-        font-weight: 300;
-        line-height: normal;
-        color: #545454;
     }
     button {
         margin-top: 50px;
