--- a/src/components/globals/Loader/loader.scss
+++ b/src/components/globals/Loader/loader.scss
@@ -5,14 +5,31 @@
     top: 0;
     bottom: 0;
     margin: auto;
-    width: 25px;
-    height: 25px;
     border-radius: 50%;
     background: transparent;
-    border: 3px solid white;
-    border-top: none;
-    border-right: none;
+    border: 3px solid blue;
+    border-top: none !important;
+    border-right: none !important;
     animation: loader .8s infinite linear;
+
+    &.blue {
+        border: 3px solid blue;
+    }
+    &.x1 {
+        width: 25px;
+        height: 25px;
+        border-width: 3px;
+    }
+    &.x2 {
+        width: 50px;
+        height: 50px;
+        border-width: 4px;
+    }
+    &.x3 {
+        width: 90px;
+        height: 90px;
+        border-width: 5px;
+    }
 }
 
 @keyframes loader {
