--- a/src/components/globals/IconButton/icon-button.scss
+++ b/src/components/globals/IconButton/icon-button.scss
@@ -28,4 +28,10 @@
             background-color: rgb(220, 60, 49);
         }
     }
+    &.orange {
+        background-color: #FF5722;
+        &:hover {
+            background-color: #f7805c;
+        }
+    }
 }
