--- a/src/components/globals/Loader/loader.scss
+++ b/src/components/globals/Loader/loader.scss
@@ -7,7 +7,7 @@
     margin: auto;
     border-radius: 50%;
     background: transparent;
-    border: 3px solid blue;
+    border: 3px solid white;
     border-top: none !important;
     border-right: none !important;
     animation: loader .8s infinite linear;
