--- a/src/components/globals/IconButton/icon-button.scss
+++ b/src/components/globals/IconButton/icon-button.scss
@@ -29,9 +29,9 @@
         }
     }
     &.orange {
-        background-color: #FF5722;
+        background-color: orange;
         &:hover {
-            background-color: #f7805c;
+            background-color: rgb(243, 190, 91);
         }
     }
 }
