--- a/src/components/globals/Table/table.scss
+++ b/src/components/globals/Table/table.scss
@@ -16,9 +16,23 @@
                 border-top: 1px solid #ddd;
             }
         }
+        .no-border-top td {
+            border-top: none;
+        }
     }
     th, td {
         padding: 8px;
         text-align: center;
+    }
+    caption {
+        background-color: #009688;
+        width: 100%;
+        height: 44px;
+        margin-bottom: 15px;
+        border-bottom: 1px solid #ddd;
+        caption-side: top;
+        text-align: left;
+        color: white;
+        padding: 12px 15px;
     }
 }
