--- a/src/components/globals/ViewForm/view-form.scss
+++ b/src/components/globals/ViewForm/view-form.scss
@@ -9,6 +9,20 @@
     border-radius: 10px;
     padding: 40px 20px 30px 20px;
 
+    p {
+        margin-bottom: 40px;
+        font-size: 18px;
+        line-height: 1.4;
+
+        &:first-of-type {
+            margin-top: -15px;
+        }
+    }
+    .error {
+        color: red;
+        margin-bottom: 10px;
+    }
+
     .button {
         width: 100%;
         max-width: 200px;
