--- a/src/components/globals/IconButton/icon-button.scss
+++ b/src/components/globals/IconButton/icon-button.scss
@@ -11,7 +11,7 @@
         width: 18px;
         height: 18px;
     }
-    &.loading {
+    &.loading, &.disabled {
         user-select: none;
         pointer-events: none;
     }
@@ -32,6 +32,25 @@
         background-color: orange;
         &:hover {
             background-color: rgb(243, 190, 91);
+        }
+    }
+    &.green {
+        background-color: #00e676;
+        &:hover {
+            background-color: #00c853
+        }
+    }
+    &.icon-button.purple {
+        background-color: #3f51b5;
+        &:hover {
+            background-color: #3949ab;
+        }
+    }
+    
+    &.disabled {
+        background-color: #bdbdbd;
+        &:hover {
+            background-color: #bdbdbd;
         }
     }
 }
