--- a/src/components/globals/Modal/modal.scss
+++ b/src/components/globals/Modal/modal.scss
@@ -74,6 +74,11 @@
         display: flex;
         flex-direction: column;
         
+        .grid-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            column-gap: 30px;
+        }
         button {
             align-self: center;
             width: 100%;
