--- a/src/styles/layout/side-bar.scss
+++ b/src/styles/layout/side-bar.scss
@@ -11,6 +11,10 @@
     top: 0px;
     left: 0px;
     position: fixed;
+    transition: .4s all;
+    opacity: 0;
+    transform: translateX(-300px);
+    pointer-events: none;
 
     h1 {
         text-transform: uppercase;
@@ -77,6 +81,18 @@
     > .top {
         padding-top: 14px;
         padding-bottom: 13px;
+        position: relative;
+        pointer-events: none;
+        i {
+            color: white;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            left: 10px;
+            height: 20px;
+            display: none;
+        }
     }
     > .mid {
         border-top: 1px solid rgba(255, 255, 255, .3);
@@ -92,7 +108,6 @@
         row-gap: 3px;
         padding-top: 13px;
     }
-    
     &::before {
         content: "";
         position: absolute;
@@ -106,9 +121,40 @@
         height: inherit;
         opacity: .23;
     }
+
+    &.active {
+        opacity: 1;
+        transform: translateX(0px);
+        pointer-events: initial;
+    }
+
+    @media screen and (max-width: 800px) {
+        z-index: 3;
+        
+        &.active {
+            .top {
+                cursor: pointer;
+                pointer-events: initial;
+                i {
+                    display: initial;
+                }
+            }
+        }
+    }
+    @media screen and (max-width: 400px) {
+        max-width: initial;
+    }
 }
 
 .padding-right {
-    padding-right: 270px;
-    height: 100%;
+    transition: .4s all;
+
+    @media screen and (min-width: 800px) {
+        padding-right: 0px;
+        height: 100%;
+        
+        &.active {
+            padding-right: 270px;
+        }
+    }
 }
