--- a/src/styles/layout/side-bar.scss
+++ b/src/styles/layout/side-bar.scss
@@ -11,7 +11,7 @@
     top: 0px;
     left: 0px;
     position: fixed;
-    transition: .4s all;
+    transition: .3s linear all;
     opacity: 0;
     transform: translateX(-300px);
     pointer-events: none;
@@ -147,7 +147,7 @@
 }
 
 .padding-right {
-    transition: .4s all;
+    transition: .3s linear all;
 
     @media screen and (min-width: 800px) {
         padding-right: 0px;
