--- a/src/components/globals/Modal/modal.scss
+++ b/src/components/globals/Modal/modal.scss
@@ -11,6 +11,8 @@
     top: 50%;
     display: flex;
     flex-direction: column;
+    max-height: 90vh;
+    overflow: auto;
     
     .exit {
         position: absolute;
@@ -95,6 +97,24 @@
 
             &:last-child {
                 margin-right: 0;
+            }
+        }
+    }
+
+    @media screen and (max-width: 545px) {
+        width: 90%;
+    }
+    @media screen and (max-width: 375px) {
+        .bot {
+            > button {
+                width: 100%;
+                min-width: initial;
+                padding-left: 35px;
+                display: flex;
+                align-items: center;
+                i {
+                    left: 10px;
+                }
             }
         }
     }
