--- a/src/components/globals/FoodCard/food-card.scss
+++ b/src/components/globals/FoodCard/food-card.scss
@@ -35,6 +35,10 @@
     min-height: 328px;
     width: 100%;
     position: relative;
+
+    @media screen and (max-width: 400px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .submit-button {
