--- a/src/components/globals/Table/table.scss
+++ b/src/components/globals/Table/table.scss
@@ -2,6 +2,7 @@
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
+
     thead {
         tr th {
             border-bottom: 2px solid #ddd;
@@ -47,5 +48,16 @@
         text-align: left;
         color: white;
         padding: 12px 15px;
+    }
+}
+
+.table-container {
+
+    &.responsive {
+        overflow: auto;
+        
+        table {
+            min-width: 500px;
+        }
     }
 }
