--- a/src/styles/views/view-styles.scss
+++ b/src/styles/views/view-styles.scss
@@ -6,11 +6,26 @@
     button {
         margin-left: 30px;
     }
+
+    @media screen and (max-width: 475px) {
+        flex-direction: column;
+        max-width: initial;
+        button {
+            margin-left: 0;
+        }
+    }
 }
 
 .three-table-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+
+    @media screen and (max-width: 850px) {
+        grid-template-columns: 1fr 1fr;
+    }
+    @media screen and (max-width: 500px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .group-selectors {
