--- a/src/components/globals/Inputs/form-group.scss
+++ b/src/components/globals/Inputs/form-group.scss
@@ -41,6 +41,7 @@
         color: #636363;
         font-size: 12px;
         display: none;
+        margin-bottom: 0;
     }
     .loader {
         position: relative;
