--- a/src/components/globals/Modal/modal.scss
+++ b/src/components/globals/Modal/modal.scss
@@ -103,6 +103,10 @@
 
     @media screen and (max-width: 545px) {
         width: 90%;
+
+        .title {
+            line-height: initial;
+        }
     }
     @media screen and (max-width: 375px) {
         .bot {
