--- a/src/components/globals/Tabs/tabs.scss
+++ b/src/components/globals/Tabs/tabs.scss
@@ -7,6 +7,11 @@
         margin-bottom: 15px;
         border-bottom: 1px solid #ddd;
         display: flex;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     .tab-text {
         height: 100%;
