--- a/src/components/globals/ViewDescription/view-description.scss
+++ b/src/components/globals/ViewDescription/view-description.scss
@@ -3,4 +3,8 @@
     margin-bottom: 20px;
     font-weight: 300;
     line-height: 1.4;
+
+    @media screen and (max-width: 500px) {
+        font-size: 18px;
+    }
 }
