--- a/src/styles/globals/global-styles.scss
+++ b/src/styles/globals/global-styles.scss
@@ -2,32 +2,32 @@
     margin-bottom: 5px;
 }
 .mb-10 {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .mb-15 {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 .mb-20 {
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 .mb-25 {
-    margin-bottom: 5px;
+    margin-bottom: 25px;
 }
 
 .mt-5 {
     margin-top: 5px;
 }
 .mt-10 {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 .mt-15 {
-    margin-top: 5px;
+    margin-top: 15px;
 }
 .mt-20 {
-    margin-top: 5px;
+    margin-top: 20px;
 }
 .mt-25 {
-    margin-top: 5px;
+    margin-top: 25px;
 }
 
 .max-100 {
@@ -49,4 +49,8 @@
 .max-500 {
     width: 100%;
     max-width: 500px;
+}
+
+.bold {
+    font-weight: 700 !important;
 }
